# encrypted-http-body-protocol

./: .gitignore  AGENTS.md  LICENSE  Package.swift  README.md  SPEC.md  go.mod  go.sum  main.go
.github/workflows/: release.yml  test.yml
client/: client.go  client_test.go  main.go
cmd/example/client/: main.go
cmd/example/server/: main.go
cmd/fetch/: main.go
cmd/server/: main.go
gomobile/: client.go  streaming.go
identity/: aead.go  crypt.go  crypt_test.go  derive.go  derive_test.go  identity.go  identity_test.go  middleware.go  middleware_test.go  security_test.go  session_recovery.go  session_recovery_test.go
js/: .gitignore  .npmrc  README.md  build-browser.js  chat.html  package-lock.json  package.json  serve.js  test.html  tsconfig.cjs.json  tsconfig.json
js/examples/: chat.html  example.ts  test.html
js/src/: client.ts  derive.ts  errors.ts  example.ts  identity.ts  index.ts  noise.ts  noisews.ts  protocol.ts  request-options.ts  streaming-test.ts
js/src/test/: client.test.ts  derive.test.ts  identity.test.ts  noisews.integration.ts  noisews.test.ts  security.test.ts  session-recovery.test.ts  streaming.integration.ts  streaming.test.ts
middleware/: encrypt.go  middleware.go  middleware_test.go
noisews/: client.go  conn.go  noisews.go  noisews_test.go  server.go  vectors_test.go
pkg/client/: main.go
pkg/server/: main.go
protocol/: protocol.go
python/: .gitignore  pyproject.toml
python/src/ehbp/: __init__.py  _http.py  client.py  derive.py  errors.py  identity.py  noisews.py  protocol.py  session.py  transport.py
python/tests/: conftest.py  test_client.py  test_derive.py  test_noisews.py  test_transport.py  test_vectors.py
rust/: Cargo.toml
rust/src/: client.rs  derive.rs  error.rs  identity.rs  lib.rs  noisews.rs  protocol.rs  session.rs
rust/tests/: noisews.rs  vectors.rs
scripts/: bump-version.sh
swift/: .gitignore  Package.swift
swift/Sources/EHBP/: Client.swift  Derive.swift  EHBP.swift  Identity.swift  Noise.swift  NoiseWebSocket.swift  Protocol.swift
swift/Tests/EHBPTests/: DeriveTests.swift  IdentityTests.swift  NoiseWebSocketTests.swift  SecurityTests.swift  SessionRecoveryTests.swift  StreamingTests.swift  UnencryptedResponseTests.swift
test-vectors/: derive.json  noisews.json  response-decryption.json  session-recovery-token.json
