[package]
name = "tinfoil-ehbp"
version = "0.2.6"
edition = "2021"
rust-version = "1.87"
description = "Rust client for the encrypted HTTP body protocol"
license = "MIT"

[features]
default = ["rustls-aws-lc"]
rustls-aws-lc = ["reqwest/rustls"]
rustls-no-provider = ["reqwest/rustls-no-provider"]

[dependencies]
aes-gcm = "0.10"
async-stream = "0.3"
bytes = "1"
futures-core = "0.3"
hex = "0.4"
hkdf = "0.12"
http = "1"
http-body-util = "0.1"
hpke = "0.13"
rand = { version = "0.9", default-features = false, features = ["os_rng", "std_rng"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
url = "2"
zeroize = "1"

[dev-dependencies]
futures-util = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["multipart", "stream"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
